milestone 3 - registration & login
added the ability to register and login, when done successfully it navigates you to an empty page (FOR NOW).
- registration saves user data in the database
- logging in validates user input from the database

--- a/application/package.json
+++ b/application/package.json
@@ -8,6 +8,7 @@
     "grade": "npm i && node ./bin/dbloader  && nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
