--- a/application/package.json
+++ b/application/package.json
@@ -14,7 +14,10 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-flash": "github:RGBboy/express-flash",
     "express-handlebars": "^5.3.2",
+    "express-mysql-session": "^3.0.0",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
