--- a/application/package.json
+++ b/application/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^5.3.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
+    "flash": "^1.1.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
