--- a/application/package.json
+++ b/application/package.json
@@ -21,6 +21,7 @@
     "flash": "^1.1.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "serve-favicon": "^2.5.0"
   },
